--- a/src/main/resources/templates/mail/tasks-in-database.html
+++ b/src/main/resources/templates/mail/tasks-in-database.html
@@ -114,11 +114,7 @@
                                             </tbody>
                                         </table>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
-                                            Application functionality:
-                                        </p>
-                                        <ul th:each="function : ${application_functionality}">
-                                            <li th:text="${function}"></li>
-                                        </ul>
+                                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"> You have  <span th:text="${tasks_number}"></span> tasks in database. </p>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"> Goodbye dear <span th:text="${admin_config.getAdminName()}"></span>. </p>
                                     </td>
                                 </tr>
